--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,4 @@
-﻿/*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
+/*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
 
 html {
 	line-height: 1.15;
