--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1282,6 +1282,33 @@ template {
 	font-display: swap
 }
 
+@font-face {
+	font-family: 'Montserrat';
+	src: url("/assets/fonts/Montserrat/Montserrat-Regular.ttf") format("ttf");
+	font-weight: 100;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url("/assets/fonts/Montserrat/Montserrat-Medium.ttf") format("ttf");
+	font-weight: 500;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url("/assets/fonts/Montserrat/Montserrat-Bold.ttf") format("ttf");
+	font-weight: 700;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap
+}
+
 
 border {
   border-style: solid;
