Co-authored-by: ShortyJay <ShortyJay@users.noreply.github.com>

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3741,13 +3741,13 @@ body.touch .sidescroll .sidescroll__wrap {
 }
 
 .q_slide {
-	overflow: hidden;
+	overflow: visible;
 	position: relative;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	z-index: 1;
 	opacity: 1;
-	max-height: 1000px
+	max-height: 1080px
 }
 
 .q_slide .q_slide-inner {
