--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -244,3 +244,13 @@ footer .overlay {
 	opacity: 0.8;
 	pointer-events: none
 }
+
+.background-image {
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center
+}
