--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -208,3 +208,239 @@
 body.touch .sidescroll .sidescroll__wrap {
 	overflow-x: auto
 }
+
+.section .full_banner {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	max-height: 900px;
+	overflow: hidden
+}
+
+@media screen and (max-width: 500px) {
+	.section .full_banner {
+		height: 60vh
+	}
+}
+
+.section .full_banner .bottom-cover {
+	position: absolute;
+	height: 60%;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background: #000;
+	background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000 100%)
+}
+
+.section .full_banner .bottom-cover.short {
+	height: 30%
+}
+
+.section .full_banner .cover_top,
+.section .full_banner .cover_bottom {
+	position: absolute;
+	width: 100%;
+	left: 0;
+	height: 40%;
+	z-index: 1;
+	pointer-events: none
+}
+
+@media screen and (max-width: 500px) {
+	.section .full_banner .cover_top,
+	.section .full_banner .cover_bottom {
+		display: none
+	}
+}
+
+.section .full_banner .cover_top {
+	top: 0;
+	background: linear-gradient(180deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%)
+}
+
+.section .full_banner .cover_bottom {
+	bottom: 0;
+	height: 30%;
+	background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%)
+}
+
+.section .full_banner .banner-overlay {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	left: 0;
+	top: 0;
+	background: rgba(0, 0, 0, 0.1)
+}
+
+.section .full_banner .banner-overlay.dark {
+	background: rgba(0, 0, 0, 0.5)
+}
+.section .full_banner .banner-overlay {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	left: 0;
+	top: 0;
+	background: rgba(0, 0, 0, 0.1)
+}
+
+.section .full_banner .banner-overlay.dark {
+	background: rgba(0, 0, 0, 0.5)
+}
+.section .full_banner .video-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	
+}
+
+.section .full_banner .video-wrapper {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	overflow: hidden
+}
+
+.section .full_banner .video-wrapper video {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: auto;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
+	-o-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%)
+}
+
+.section .full_banner .video-wrapper.half {
+	background-color: #000
+}
+
+.section .full_banner .video-wrapper.half video {
+	width: auto;
+	min-width: 50%;
+	height: 80%;
+	min-height: 80%;
+	left: auto;
+	right: 10%;
+	-webkit-transform: translateX(0) translateY(-50%);
+	-moz-transform: translateX(0) translateY(-50%);
+	-ms-transform: translateX(0) translateY(-50%);
+	-o-transform: translateX(0) translateY(-50%);
+	transform: translateX(0) translateY(-50%)
+}
+
+@media screen and (max-width: 500px) {
+	.section .full_banner .video-wrapper.half video {
+		height: 90%;
+		min-height: 90%;
+		right: -50%;
+		-webkit-transform: translateX(0) translateY(-40%);
+		-moz-transform: translateX(0) translateY(-40%);
+		-ms-transform: translateX(0) translateY(-40%);
+		-o-transform: translateX(0) translateY(-40%);
+		transform: translateX(0) translateY(-40%)
+	}
+}
+
+.section .full_banner .q-container {
+	position: absolute;
+	top: 50%;
+	z-index: 2;
+	padding-left: 20%;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	transform: translateY(-50%)
+}
+
+@media screen and (max-width: 500px) {
+	.section .full_banner .q-container {
+		padding-left: 10%
+	}
+}
+
+.section .full_banner p {
+	max-width: 350px
+}
+
+.section .full_banner.wide .q-container {
+	padding-left: 15%
+}
+
+@media screen and (max-width: 500px) {
+	.section .full_banner.wide .q-container {
+		padding-left: 10%
+	}
+}
+
+.section .full_banner.long {
+	height: 120vh;
+	max-height: 1000px
+}
+
+@media screen and (max-width: 500px) {
+	.section .full_banner.long {
+		height: 100vh
+	}
+}
+
+.section .full_banner.long.short {
+	height: 100vh;
+	max-height: 900px
+}
+
+.section .full_banner.long .q-container {
+	top: 90vh;
+	-webkit-transform: translateY(-100%);
+	-moz-transform: translateY(-100%);
+	-ms-transform: translateY(-100%);
+	-o-transform: translateY(-100%);
+	transform: translateY(-100%)
+}
+
+@media screen and (max-width: 500px) {
+	.section .full_banner.long .q-container {
+		top: 50%;
+		-webkit-transform: translateY(-50%);
+		-moz-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		-o-transform: translateY(-50%);
+		transform: translateY(-50%)
+	}
+}
+
+.section .full_banner.long .q-container.appear {
+	margin-top: 0
+}
+
+@media screen and (max-width: 500px) {
+	.section .full_banner.long .q-container.appear {
+		margin-top: 0
+	}
+}
+
+.section .full_banner.longer {
+	height: 150vh;
+	max-height: 1600px
+}
+
+@media screen and (max-width: 500px) {
+	.section .full_banner.longer {
+		height: 100vh
+
+	}
+}
